Fix user profile wrong margins (#166)
* FIxed missing margin
And content that going beyond the width

* Removed additional margin

* Also removed additional margin

* Fixed styles on the board page

--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -53,8 +53,5 @@ app-login-page
   width: 100%
   min-width: 100%
 
-::ng-deep .violet-transparent
-  background: rgba(colorscheme(violet-400), 0.8)
-
 html, body
-  margin: 0
+  height: 100%
